--- a/style.css
+++ b/style.css
@@ -19,5 +19,10 @@ h1 {
     margin-left: 8rem;
 }
 button {
+
     box-shadow: 4px 4px grey;
+}
+.fas {
+    padding-right: 7px;
+    padding-top: 10px;
 }
